add statistic order
